--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pyyaml~=6.0
 APScheduler==3.9.1
-homie-helpers~=0.0.5
-pychromecast
-bravia-tv
+homie-helpers~=0.0.6
+pychromecast~=12.0.0
+bravia-tv~=1.0.11
+service-bootstrap~=0.0.1
